# boaviztapi

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  ADOPTERS.md  CNAME  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  app.py  compose-prod.yaml  compose.yaml  dev-requirements.txt  docker-compose.yaml  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  setup.py  validate_csv.py
.devcontainer/: Containerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_client.yml  build_client_rust.yml  build_client_sdk_with_poetry.yml  check_csv_data.yml  check_csv_data_format.yml  check_markdown_links.yaml  clever_setup.yml  cloud_provider_data_update.yml  docker-image.yml  docker-publish.yml  format.yml  generate_requirements_for_clever_cloud  generate_requirements_for_clever_cloud.yml  github_page_deploy.yml  lint.yaml  lint.yml  main-dev.yml  main-main.yml  release.yml  run-tests.yml  test.yml
API/: Dockerfile  Procfile  README.md  app.py  requirements.txt
DOC/: dockerfile
Explanations/archetypes/: index.html
Explanations/auto_complete/: index.html
Explanations/boavizta_db/: index.html
Explanations/consumption_profile/: index.html
Explanations/embedded_methodology/: index.html
Explanations/error_margin/: index.html
Explanations/impacts/: index.html
Explanations/useful_resources/: index.html
Explanations/verbose/: index.html
Reference/routes/: index.html
api/DTO/: component_DTO.py  server_DTO.py
api/dto/: impacts.py  server_dto.py
api/model/: component.py  impacts.py  server.py  usage.py
api/route/: server_route.py
api/routers/: cloud_router.py  component_router.py  server_router.py
api/service/: archetype.py  bottom_up.py  ref_data.py  verbose.py
boaviztapi/: __init__.py  application_context.py  main.py  parameters.py
boaviztapi/compute/: __init__.py  impacts_computation.py  verbose.py
boaviztapi/data/: archetype.py  config.yml  factor_provider.py  factors.yml
boaviztapi/dto/: __init__.py  base_dto.py  component_dto.py  server_dto.py  usage_dto.py
boaviztapi/model/: __init__.py  boattribute.py  impact.py
boaviztapi/models/: __init__.py  impact.py
boaviztapi/routers/: __init__.py  auth_router.py  cloud_instance_router.py  cloud_router.py  component_router.py  configuration_router.py  consumption_profile_router.py  costs_router.py  currency_router.py  electricity_prices_router.py  iot_router.py  options_router.py  peripheral_router.py  portfolio_router.py  pydantic_based_router.py  results_router.py  server_router.py  sustainability_router.py  terminal_router.py  user_router.py  user_terminal_router.py  utils_router.py  wizard_router.py
boaviztapi/service/: allocation.py  archetype.py  base.py  bottom_up.py  carbon_intensity_provider.py  cloud_pricing_provider.py  cloud_provider.py  consumption_profile.py  costs_computation.py  costs_provider.py  currency_converter.py  elec_factor_provider.py  electricitymaps.py  electricitymaps_service.py  exceptions.py  factor_provider.py  impacts_computation.py  results_provider.py  sustainability_provider.py  utils.py  utils_provider.py  verbose.py  wizard_service.py
boaviztapi/utils/: auth_backend.py  config.py  costs_calculator.py  country.py  csv_to_dto.py  fuzzy_match.py  fuzzymatch.py  get_vantage.py  get_version.py  roundit.py  validators.py
config/: index.html
contributing/cloud_instance/: index.html
contributing/cloud_provider/: index.html
contributing/cpu/: index.html
contributing/gpu/: index.html
contributing/server/: index.html
data/components/: cpu_power.csv  gpu_power.csv  ssd_power.csv
data/electricity/: usage_impact_factors.csv
deploy/: index.html
docs/: CNAME  Dockerfile  README.md  mkdocs.yml  requirements.txt  utils.py
docs/docs/: config.md  deploy.md  faq.md  index.md  openapi.json  q&a.md  release_notes.md
docs/utils/: script_tutorial_output_automation.py
getting_started/consumption_profile/: index.html
getting_started/cpu_component/: index.html
getting_started/end_user_devices/: index.html
getting_started/single_cloud_instance/: index.html
getting_started/single_server/: index.html
hack/addData/: addData.go  addData.md
q&a/: index.html
release_notes/: index.html
scripts/: compare_aws_instances.py
search/: search_index.json
tests/: conftest.py  test_component.py  test_server.py
tests/api/: test_cloud.py  test_cloud_e2e.py  test_cloud_instance.py  test_cloud_platform.py  test_cloud_wu.py  test_component.py  test_cp.py  test_electricity_maps_e2e.py  test_electricity_price.py  test_fe.py  test_iot.py  test_server.py  test_sustainability.py  test_terminals_peripherals.py  test_utils.py  test_wizard.py  (+1 more)
(+772 files in other folders)
