[tool.poetry]
name = "boaviztapi"
version = "1.3.15"
description = "An API to access Boavizta's methodologies and footprint reference data"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.22"
pandas = "^2.2.3"
aiofile = "^3.8"
numpy = "^2.2.0"
scipy = "^1.14.1"
rapidfuzz = "^3.0"
markdown = "^3.4"
mangum = "^0.20.0"
importlib-metadata = "^6.6.0"
pyyaml = "^6.0"
toml = "^0.10.2"

# Security updates
aiohttp = "^3.13.3"
urllib3 = "^2.6.3"

[tool.poetry.group.dev]
optional = true
include-groups = ["csv"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
atomicwrites = "^1.4.1"
httpx = "^0.28.1"
requests = "^2.32.3"
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[tool.poetry.group.csv]
optional = true

[tool.poetry.group.csv.dependencies]
chkcsv = "^1.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.4"
mkdocs-render-swagger-plugin = "^0.1.0"
mkdocs-macros-plugin = "^1.0.4"
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
force-exclude = true

[tool.ruff.lint]
# TODO - uncomment these ignores one by one and fix in separate PRs
ignore = [
    "E701", # Multiple statements on one line
    "E721", # Use is and is not for type comparisons
    "F401", # Unused imports and exports
    "F403", # Unable to detect undefined names
    "F405", # Potentially missing imports
    "F811", # Redefinition of unused
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
